# lister-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  openapi.yaml
.github/workflows/: build-and-push.yml
src/: auth.rs  config.rs  error.rs  main.rs  state.rs  validation.rs
src/handlers/: categories.rs  items.rs  lists.rs  mod.rs  names.rs  search.rs
src/models/: category.rs  item.rs  list.rs  mod.rs  name.rs
src/routes/: mod.rs
