[package]
name = "ultimatelister-api"
version = "1.0.0"
edition = "2021"
authors = ["Mark Reidel"]
license = "AGPL-3.0"

[dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "rust_decimal"] }
rust_decimal = { version = "1.33", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP types
http = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

